[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/take-out_brains_chromabb.jpg" type="Texture" id=1]
[ext_resource path="res://Opening.gd" type="Script" id=2]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/game jam druums.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "LogoFadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("LogoSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -41.3191
margin_top = -24.3677
margin_right = 683.681
margin_bottom = 381.632
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoSprite" type="Sprite" parent="."]
position = Vector2( 319.502, 227.297 )
scale = Vector2( 0.0891751, 0.0891751 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LogoFadeIn = SubResource( 1 )

[node name="PresentsTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="TitleTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="PresentsLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -60.0
margin_right = 303.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "PRESENTS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PushToStart" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.672
margin_top = -131.079
margin_right = 157.328
margin_bottom = -16.079
custom_fonts/font = SubResource( 2 )
text = "Push SPACE
to start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = " Intergalactic 
             Hoedown 
                     Showdown"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Them robots took my
sarsparilla!
Destroy them all!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="timeout" from="PresentsTimer" to="." method="presents"]
[connection signal="timeout" from="TitleTimer" to="." method="title"]
[connection signal="timeout" from="StartTimer" to="." method="instructions"]
